--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
-  "deployments":[
+  \"deployments\":[
     {
-      "service": "microservice",
-      "version": "1.23.3-debian-11-r33"
+      \"service": \"microservice\",
+      \"version": \"1.23.3-debian-11-r33\"
     },
     {
-      "service": "microservice",
-      "version": "1.23.3-debian-11-r17"
+      \"service\": \"microservice\",
+      \"version\": \"1.23.3-debian-11-r17\"
     }
   ]
 }
