--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "deployments":[
     {
-      "service": "break",
+      "service": "microservice1",
       "version": "1.23.3-debian-11-r33"
     },
     {
