--- a/config-traditional.json
+++ b/config-traditional.json
@@ -7,7 +7,7 @@
     },
     {
       "service": "sshservice",
-      "infra": "localmacpdcinfra",
+      "infra": "sshawspdcinfra",
       "version": "0.0.1-SNAPSHOT"
     }
   ]
