--- a/config-traditional.json
+++ b/config-traditional.json
@@ -2,7 +2,7 @@
   "deployments":[
     {
       "service": "sshservicetwo",
-      "infra": "sshawsinfra",
+      "infra": "sshawspdcinfra",
       "env": "sshdev",
       "version": "0.0.1-SNAPSHOT",
       "artifact":"",
