--- a/config-traditional.json
+++ b/config-traditional.json
@@ -7,6 +7,14 @@
       "version": "0.0.1-SNAPSHOT",
       "artifact":"",
       "pipeline": "CD_trigger_via_pipeline_traditional"
+    },
+    {
+      "service": "sshservicetwo",
+      "infra": "sshawsinfra",
+      "env": "sshdev",
+      "version": "0.0.1-SNAPSHOT",
+      "artifact":"",
+      "pipeline": "CD_trigger_via_pipeline_traditional"
     }
   ]
 }
