--- a/config-traditional-multi-infra.json
+++ b/config-traditional-multi-infra.json
@@ -2,7 +2,7 @@
   "deployments":[
     {
       "service": "sshservicetwo",
-      "infra": [{"identifier","sshawspdcinfra"},{"identifier","sshawsinfra"}],
+      "infra": "[{\"identifier\",\"sshawspdcinfra\"},{\"identifier\",\"sshawsinfra\"}]",
       "env": "sshdev",
       "version": "0.0.1-SNAPSHOT",
       "artifact":"",
